@@ -1,6 +1,6 @@
 Package: mi
-Version: 0.09-04
-Date: 2010-4-28
+Version: 0.09-05
+Date: 2010-5-17
 Title: Missing Data Imputation and Model Checking
 Author: Andrew Gelman <gelman@stat.columbia.edu>, Jennifer Hill
         <jh1030@columbia.edu>, Yu-Sung Su <ys463@columbia.edu>, Masanao
@@ -11,6 +11,6 @@ Depends: methods, MASS, nnet, car, arm, Matrix, lme4, R2WinBUGS, abind
 Description: Missing-data imputation and model checking
 URL: http://www.stat.columbia.edu/~gelman/
 License: GPL (>= 2)
-Packaged: 2010-05-09 00:13:48 UTC; yusung
+Packaged: 2010-05-17 18:54:56 UTC; yusung
 Repository: CRAN
-Date/Publication: 2010-05-09 15:28:36
+Date/Publication: 2010-05-17 19:25:28
